<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">K234112E Application</string>
    <string name="str_value">Welcome K234112E</string>
    <string name="str_say_hello">Hello K234112E</string>
    <string name="str_clickme_to_say_hello">Say Hello</string>

    <string name="str_login_system">Login System</string>
    <string name="str_username">Username:</string>
    <string name="str_hint_username">Enter your username</string>

    <string name="str_password">Password:</string>
    <string name="str_hint_password">Enter your password</string>

    <string name="str_login">Login</string>
    <string name="str_exit">Exit</string>

    <string name="str_login_success">Login successful!</string>
    <string name="str_login_failed">Login failed</string>

    <string name="str_mc">MC</string>
    <string name="str_mr">MR</string>
    <string name="str_mplus">M+</string>
    <string name="str_mminus">M-</string>
    <string name="str_ms">MS</string>
    <string name="str_m">M</string>

    <string name="str_open_calculator_app">Open Calculator App</string>
    <string name="str_save_login_infor">Save login information</string>

    <string name="str_login_role">Login Role</string>
    <string name="str_role_admin">Administrator</string>
    <string name="str_role_employee">Employee</string>

    <string name="str_confirm_exit_title">Confirm Exit</string>
    <string name="str_confirm_exit_message">Do you want to exit?</string>

    <string name="str_yes">YES</string>
    <string name="str_no">NO</string>

    <string name="str_employee_id">Employee ID:</string>
    <string name="str_employee_name">Employee Name:</string>
    <string name="str_phone_number">Phone Number:</string>

    <string name="str_save">Save</string>
    <string name="str_delete">Delete</string>

    <string name="str_confirm_exit">Are you sure you want to exit?</string>

    <string name="msg_select_employee_to_delete">Please select an employee to delete</string>
    <string name="msg_employee_not_found">Employee not found</string>

    <string name="dialog_delete_confirm_title">Delete Confirmation</string>
    <string name="dialog_delete_confirm_msg">
        Are you sure you want to delete employee [%1$s]?
    </string>

    <string name="msg_delete_success">Deleted successfully</string>
    <string-array name="employee_samples">
        <item>e1-Tèo-0965669729</item>
        <item>e2-Tý-0965669730</item>
        <item>e3-Bin-0965669731</item>
        <item>e4-Bo-0965669732</item>
        <item>e5-Kun-0965669733</item>
    </string-array>
</resources>