<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Ảnh nền -->


    <!-- Nội dung căn giữa -->
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="24dp"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_login_system"
            android:textAlignment="center"
            android:textColor="#C7267C"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_background"
            android:text="@string/str_username"
            android:textColor="@color/pink_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_hint_username"
            android:inputType="text"
            android:text="admin" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_background"
            android:text="@string/str_password"
            android:textColor="@color/pink_text"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/str_hint_password"
            android:inputType="textPassword"
            android:text="123" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_login_role" />

        <RadioGroup
            android:layout_width="362dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radAdmin"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:text="@string/str_role_admin" />

            <RadioButton
                android:id="@+id/radEmployee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/str_role_employee" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/chkSaveLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_save_login_infor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="loginSystem"
                android:text="@string/str_login" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="exitSystem"
                android:text="@string/str_exit" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green_background" />

    </LinearLayout>

</FrameLayout>