<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculatorActivity">

    <EditText
        android:id="@+id/edtFormula"
        android:layout_width="match_parent"
        android:layout_height="111dp"
        android:background="@color/pink_text"
        android:ems="10"
        android:inputType="text"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_mc"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_mr"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_mplus"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_mminus"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_ms"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/txtM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="@string/str_m"
            android:textAlignment="center" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/pink_text"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnPercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="%"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnCE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="CE"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="C"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="Del"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="1/x"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnx_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="x^2"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn_sqrt_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="sqrt(x)"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text=":"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="7"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="8"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="9"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnMulti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="x"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="4"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="5"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="6"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="-"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="1"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="2"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="3"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="+"
                android:textColor="@color/red" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_Plus_Minus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="+/-"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:onClick="processInputData"
                android:text="0"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btn_dot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink_text"
                android:text="."
                android:textColor="@color/red" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/pink"
                android:text="="
                android:textColor="@color/red" />
        </TableRow>
    </TableLayout>
</LinearLayout>